@@ -192,6 +192,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #5977: distutils build_ext.get_outputs was not taking into account the
+  inplace option. Initial patch by kxroberto.
+
 - Issue #5984: distutils.command.build_ext.check_extensions_list checks were broken
   for old-style extensions.
 
